--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -27,7 +26,9 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.9.4",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.2",
@@ -74,5 +75,7 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": "index.js",
+  "description": ""
 }
