--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.8",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.1",
+    "@types/multer": "^1.4.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
