--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.1",
